--- a/src/app/user-list/components/user/user.tpl.html
+++ b/src/app/user-list/components/user/user.tpl.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<tr>
+    <td>Jan</td>
+    <td>Kowalski</td>
+    <td>01.01.1990</td>
+    <td>90010111111</td>
+    <td>Lublin</td>
+    <td>357-357-357</td>
+    <td>jan.kowalski@gmail.com</td>
+</tr>
