--- a/src/app/user-list/components/user-table/user-table.tpl.html
+++ b/src/app/user-list/components/user-table/user-table.tpl.html
@@ -3,25 +3,20 @@
         <input type="text" class="form-control" placeholder="Search by last name" ng-model="vm.searchString">
     </div>
 </div>
-<div class="row">
-    <div class="col-md-12">
-        <table class="table table-bordered table-striped">
-            <thead>
-            <tr>
-                <th>Imię</th>
-                <th>Nazwisko</th>
-                <th>Data urodzenia</th>
-                <th>Pesel</th>
-                <th>Miasto</th>
-                <th>Telefon</th>
-                <th>Email</th>
-                <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr user ng-repeat="singleUser in vm.userData | filter: { lastName: vm.searchString }" user-data="singleUser"></tr>
-            </tbody>
-        </table>
-
-    </div>
-</div>
+<table class="table table-bordered table-striped table-responsive">
+    <thead>
+    <tr>
+        <th>Imię</th>
+        <th>Nazwisko</th>
+        <th>Data urodzenia</th>
+        <th>Pesel</th>
+        <th>Miasto</th>
+        <th>Telefon</th>
+        <th>Email</th>
+        <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr user ng-repeat="singleUser in vm.userData | filter: { lastName: vm.searchString }" user-data="singleUser"></tr>
+    </tbody>
+</table>
