--- a/src/app/user-list/components/user-table/user-table.tpl.html
+++ b/src/app/user-list/components/user-table/user-table.tpl.html
@@ -1,22 +1,26 @@
-<div class="row" style="text-align: center">
-    <div class="col-md-4">
+<div class="row">
+    <div class="col-md-4 search-box">
         <input type="text" class="form-control" placeholder="Search by last name" ng-model="vm.searchString">
     </div>
 </div>
-<table class="table table-bordered table-striped table-responsive">
-    <thead>
-    <tr>
-        <th>Imię</th>
-        <th>Nazwisko</th>
-        <th>Data urodzenia</th>
-        <th>Pesel</th>
-        <th>Miasto</th>
-        <th>Telefon</th>
-        <th>Email</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr user ng-repeat="singleUser in vm.userData | filter: { lastName: vm.searchString }" user-data="singleUser"></tr>
-    </tbody>
-</table>
+<div class="row">
+    <table class="table table-bordered table-striped user-table">
+        <thead>
+        <tr>
+            <th>Imię</th>
+            <th>Nazwisko</th>
+            <th>Data urodzenia</th>
+            <th>Pesel</th>
+            <th>Miasto</th>
+            <th>Telefon</th>
+            <th>Email</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="singleUser in vm.userData | filter: { lastName: vm.searchString } track by $id(singleUser)"
+            user user-data="singleUser" remove-user="vm.remove(user)">
+        </tr>
+        </tbody>
+    </table>
+</div>
