--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,9 +1,5 @@
 .user-table-container {
-    margin: 30px;
-}
-
-.user-table-container {
-    margin-top: 15px;
+    margin: 15px 30px;
 }
 .user-table table {
     margin-top: 60px;
@@ -11,4 +7,13 @@
 
 div.search-container, table.user-table {
     padding-left: 0;
+}
+
+.action-button {
+    width: 100%;
+    margin: 10px 0 10px 0;
+}
+
+.edit-form input {
+    margin-top: 10px;
 }
