--- a/src/app/user-list/components/user-table/user-table.tpl.html
+++ b/src/app/user-list/components/user-table/user-table.tpl.html
@@ -12,9 +12,8 @@
             <th>Data urodzenia</th>
             <th>Pesel</th>
             <th>Miasto</th>
-            <th>Telefon</th>
             <th>Email</th>
-            <th>Actions</th>
+            <th>Akcje</th>
         </tr>
         </thead>
         <tbody>
